@@ -1,5 +1,6 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:monkey="http://namespaces.plone.org/monkey"
@@ -7,6 +8,8 @@
     i18n_domain="collective.lastmodifier">
 
     <include package="ftw.profilehook" />
+
+    <five:registerPackage package="." initialize=".initialize" />
 
     <include package="collective.monkeypatcher" file="meta.zcml" />
     <monkey:patch
@@ -32,6 +35,19 @@
     <profilehook:hook
         profile="collective.lastmodifier:default"
         handler=".hooks.installed"
+        />
+
+    <genericsetup:registerProfile
+        name="uninstall"
+        title="uninstall collective.lastmodifier"
+        directory="profiles/uninstall"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+        />
+
+    <profilehook:hook
+        profile="collective.lastmodifier:uninstall"
+        handler=".hooks.uninstalled"
         />
 
 </configure>
