@@ -4,7 +4,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement uninstall for the package.
+  [jone]
 
 
 1.0.1 (2014-02-05)
